Fix users cards styles

--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -140,23 +140,41 @@
 		.card-footer {
 			.like-icon-container {
 				color: #fff;
-				font-size: 1.4em;
-				height: 31px;
 				margin: auto;
 
 				.icon-star {
 					vertical-align: middle;
+
+					&:before {
+						font-size: 1.3em;
+					}
 				}
 			}
 			.matching-value {
 				color: $regular-gray;
+				display: inline-flex;
 				font-weight: bold;
 				margin: auto;
+				width: 100%;
+
+				.matching-string {
+					display: inline-block;
+					margin: auto;
+					white-space: nowrap;
+					overflow: hidden;
+					text-overflow: ellipsis;
+				}
+				.matching-percentage {
+					display: inline-block;
+					margin: auto;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					width: 30px;
+				}
 			}
 
 			&.liked {
 				background: $material-orange-light;
-				padding: 0;
 			}
 
 			&::before {
