Don't use fixed height for card images

--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -95,8 +95,8 @@
 				width: 100%;
 				vertical-align: middle;
 			}
-			.image.fixed-height-image {
-				height: 180px;
+			.image.fixed-max-height-image {
+				max-height: 500px;
 				overflow: hidden;
 			}
 			.matching {
