--- a/src/scss/_partials/_loading-spinner-css.scss
+++ b/src/scss/_partials/_loading-spinner-css.scss
@@ -15,6 +15,8 @@
 
 .rotation-animation {
 	animation: div-rotate 3s linear infinite;
+	transform: translateZ(0);
+	-webkit-transform: translateZ(0);
 }
 @keyframes div-rotate {
 	0% {
