QS-1249: Fix browser compatibility

--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -1,5 +1,6 @@
 .card {
 	text-align: center;
+	vertical-align: top;
 	z-index: 100;
 
 	.card-header {
@@ -167,8 +168,6 @@
 				.matching-percentage {
 					display: inline-block;
 					margin: auto;
-					overflow: hidden;
-					text-overflow: ellipsis;
 					width: 31px;
 				}
 			}
