--- a/src/scss/_partials/_messages-toolbar.scss
+++ b/src/scss/_partials/_messages-toolbar.scss
@@ -1,5 +1,6 @@
 #messages-toolbar .toolbar-inner {
   background-color: transparent !important;
+  padding: 0;
   .toolbar.messagebar {
     border-top: 1px solid $light-gray;
     .toolbar-inner {
