--- a/src/scss/pages/create-thread-lite.scss
+++ b/src/scss/pages/create-thread-lite.scss
@@ -1,6 +1,6 @@
 @import '../_partials/colors';
 
-body #root .App .view .page.create-thread-page.lite  {
+body #root .App .views .view .page.create-thread-page.lite  {
   #page-content {
     .thread-title {
       height: 15px;
