--- a/src/scss/pages/discover.scss
+++ b/src/scss/pages/discover.scss
@@ -1,6 +1,6 @@
 @import '../_partials/colors';
 
-body #root .App .view .page.discover-page {
+body #root .App .views .view .page.discover-page {
 
   #page-content {
     width: 100% !important;
