--- a/src/scss/pages/gallery-photo.scss
+++ b/src/scss/pages/gallery-photo.scss
@@ -1,6 +1,6 @@
 @import "../_partials/colors";
 
-body #root .App .view .page.gallery-photo-page {
+body #root .App .views .view .page.gallery-photo-page {
   #page-content {
     text-align: center;
     width: 93%;
