--- a/src/scss/pages/group.scss
+++ b/src/scss/pages/group.scss
@@ -2,7 +2,7 @@
 
 body #root .App {
 
-  .view .page.group-page {
+  .views .view .page.group-page {
     #page-content {
       margin-top: 70px;
       width: 100%;
