--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -1,7 +1,7 @@
 @import '../_partials/colors';
 
-body #root .App .view.home-view {
-  max-height: 569px;
+body #root .App .views .view.home-view {
+  max-height: 800px;
 
   .swiper-container {
     height: 100%;
