--- a/src/scss/pages/invitations.scss
+++ b/src/scss/pages/invitations.scss
@@ -1,4 +1,4 @@
-body #root .App .view .page.invitations-page  {
+body #root .App .views .view .page.invitations-page  {
   #page-content.invitations-content {
     margin: 75px auto 0 auto;
 
