--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -1,4 +1,4 @@
-body #root .App .view .page #page-content.login-content {
+body #root .App .views .view .page #page-content.login-content {
   margin: 100px auto 0 auto;
 
   .recover-password {
