--- a/src/scss/pages/question-stats.scss
+++ b/src/scss/pages/question-stats.scss
@@ -1,6 +1,6 @@
 @import '../_partials/colors';
 
-body #root .App .view .page.question-stats-page {
+body #root .App .views .view .page.question-stats-page {
   #page-content {
     .question-stats {
       margin-top: 70px;
