--- a/src/scss/pages/recommendations.scss
+++ b/src/scss/pages/recommendations.scss
@@ -2,7 +2,7 @@
 
 body #root .App {
 
-  .view .page {
+  .views .view .page {
     #page-content.recommendation-page {
       margin-top: 70px !important;
       width: 100% !important;
