--- a/src/scss/pages/register.scss
+++ b/src/scss/pages/register.scss
@@ -1,6 +1,6 @@
 @import '../_partials/colors';
 
-body #root .App .view .page {
+body #root .App .views .view .page {
   .gradient-transparency {
     background-image: linear-gradient(180deg, black 0%, rgba(0, 0, 0, 0.7) 50%, rgba(0, 0, 0, 0.5) 100%);
     height: 100%;
