--- a/src/scss/pages/thread.scss
+++ b/src/scss/pages/thread.scss
@@ -1,6 +1,6 @@
 @import '../_partials/colors';
 
-body #root .App .view .page.threads-page  {
+body #root .App .views .view .page.threads-page  {
   #page-content {
     margin-top: 70px;
     width: 100%;
