--- a/src/scss/pages/connect-social-networks.scss
+++ b/src/scss/pages/connect-social-networks.scss
@@ -1,4 +1,4 @@
-body #root .App .view .page.connect-social-networks-page  {
+body #root .App .views .view .page.connect-social-networks-page  {
   #page-content {
     margin: 60px auto 0 auto;
     width: 100%;
