--- a/src/scss/pages/interests.scss
+++ b/src/scss/pages/interests.scss
@@ -1,4 +1,4 @@
-body #root .App .view .page.interests-page  {
+body #root .App .views .view .page.interests-page  {
   #page-content {
     margin: 65px auto 0 auto;
     width: 100%;
