--- a/src/scss/pages/other-interests.scss
+++ b/src/scss/pages/other-interests.scss
@@ -1,4 +1,4 @@
-body #root .App .view .page.other-interests-page  {
+body #root .App .views .view .page.other-interests-page  {
   #page-content {
     margin: 60px auto 0 auto;
     width: 100%;
