--- a/src/scss/pages/other-user.scss
+++ b/src/scss/pages/other-user.scss
@@ -1,6 +1,6 @@
 @import '../_partials/colors';
 
-body #root .App .view .page.other-user-page {
+body #root .App .views .view .page.other-user-page {
   #page-content {
     width: 100%;
     .user-interests {
@@ -182,11 +182,5 @@ body #root .App .view .page.other-user-page {
         color: $material-yellow;
       }
     }
-  }
-}
-
-@media only screen and (max-width: 300px) {
-  body #root .App .view .page.user-page {
-    width: 90%;
   }
 }
