--- a/src/scss/pages/register-question-landing.scss
+++ b/src/scss/pages/register-question-landing.scss
@@ -1,6 +1,6 @@
 @import '../_partials/colors';
 
-body #root .App .view .page.register-question-landing-page {
+body #root .App .views .view .page.register-question-landing-page {
   #page-content.register-question-landing {
     margin: 30px auto 0 auto;
 
