QS-1249: Fix other-gallery photos and toolbar links

--- a/src/scss/pages/other-gallery.scss
+++ b/src/scss/pages/other-gallery.scss
@@ -1,4 +1,4 @@
-body #root .App .view .page {
+body #root .App .views .view .page {
   #page-content.gallery-photo-content {
     text-align: center;
     width: 93%;
