QS-1255: Add bullets to other user gallery

--- a/src/scss/_partials/_theme.color.scss
+++ b/src/scss/_partials/_theme.color.scss
@@ -130,7 +130,7 @@ i.icon-bars.theme-nekuno,
 }
 .swiper-pagination.color-nekuno .swiper-pagination-bullet-active,
 .theme-nekuno .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: $deep-purple;
+  background-color: #fff;
 }
 .swiper-button-next.color-nekuno,
 .swiper-container-rtl .swiper-button-prev.color-nekuno,
