--- a/src/scss/pages/other-user.scss
+++ b/src/scss/pages/other-user.scss
@@ -13,6 +13,16 @@ body #root .App .views .view .page.other-user-page {
       height: 250px;
       overflow: hidden;
       width: 100%;
+
+      .swiper-pagination {
+        left: 0;
+        width: 100%;
+        margin-top: 47%;
+        .swiper-pagination-bullet {
+          margin: 0 5px;
+        }
+      }
+
       .user-images-wrapper {
         height: 400px;
         margin-top: -75px;
