QS-1253: Use Framework7 messages toolbar

--- a/src/scss/_partials/_messages-toolbar.scss
+++ b/src/scss/_partials/_messages-toolbar.scss
@@ -1,4 +1,4 @@
-#messages-toolbar .toolbar-inner {
+/*#messages-toolbar .toolbar-inner {
   background-color: transparent !important;
   padding: 0;
   .toolbar.messagebar {
@@ -24,3 +24,4 @@
     }
   }
 }
+*/
