QS-1192: Use FB icon on FB video contents

--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -64,6 +64,9 @@
 				.icon-spotify {
 					font-size: 2.5em !important;
 				}
+				.icon-facebook {
+					font-size: 2.5em !important;
+				}
 			}
 
 			.link-icon-wrapper {
@@ -80,6 +83,10 @@
 
 			.youtube-icon-wrapper {
 				background-color: $youtube-red !important;
+			}
+
+			.facebook-icon-wrapper {
+				background-color: $facebook-blue !important;
 			}
 		}
 	}
