--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -94,7 +94,9 @@
 		cursor: pointer;
 
 		.card-content-inner {
+			min-height: 50px;
 			padding: 0;
+			overflow-x: hidden;
 
 			.discover-video {
 				width: 100%;
