QS-1265: Add share profile banner in own profile page

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -40,6 +40,7 @@
 @import '_partials/loading-spinner-css';
 @import '_partials/thread-toolbar';
 @import '_partials/filter-content-buttons';
+@import '_partials/share-profile-banner';
 
 * {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
