--- a/src/scss/_partials/_share-profile-banner.scss
+++ b/src/scss/_partials/_share-profile-banner.scss
@@ -1,6 +1,7 @@
 body #root .App .view {
   .share-profile-container {
     background-color: $deep-purple;
+    cursor: pointer;
     left: 0;
     margin-top: 20px;
     padding: 10px 10px 5%;
