--- a/src/scss/pages/other-user.scss
+++ b/src/scss/pages/other-user.scss
@@ -179,6 +179,17 @@ body #root .App .views .view .page.other-user-page {
           -moz-border-radius: 5px;
           -webkit-border-radius: 5px;
         }
+
+        .calculating-matching {
+          margin-top: 10px;
+          .icon-spinner {
+            display: block;
+            font-size: 2em;
+            line-height: 50px;
+            margin: auto;
+            width: 50px;
+          }
+        }
       }
     }
 
