QS-1264: Add edit button bellow filters at discover page

--- a/src/scss/pages/discover.scss
+++ b/src/scss/pages/discover.scss
@@ -14,6 +14,11 @@ body #root .App .views .view .page.discover-page {
       text-align: center;
     }
 
+    .edit-thread-button {
+      margin: 20px auto;
+      text-align: center;
+    }
+
     .user-list {
       .card {
         display: inline-block;
