--- a/src/scss/pages/gallery.scss
+++ b/src/scss/pages/gallery.scss
@@ -123,6 +123,25 @@ body #root .App .views .view .page.gallery-page {
     }
   }
 }
+.popup-import-album {
+  .social-icons-row-wrapper {
+    .icon-wrapper {
+      margin: 0 5%;
+      .icon {
+        font-size: 1.3em !important;
+      }
+    }
+  }
+  .upload-wrapper {
+    cursor: pointer;
+    font-size: 1.5em;
+    margin-top: 20px;
+    .icon-uploadthin {
+      font-size: 0.6em;
+    }
+  }
+}
+
 @media only screen and (max-width: 300px) {
   body #root .App .view .page.gallery-page {
     #page-content {
