Set pointer cursor por small chip list at discover

--- a/src/scss/pages/discover.scss
+++ b/src/scss/pages/discover.scss
@@ -10,6 +10,7 @@ body #root .App .views .view .page.discover-page {
     }
 
     .small-chip-list {
+      cursor: pointer;
       margin: 20px auto;
       text-align: center;
     }
