QS-1290: Modify top navbar for other user page

--- a/src/scss/_partials/_navbar.scss
+++ b/src/scss/_partials/_navbar.scss
@@ -5,7 +5,13 @@
 
 .navbar, .subnavbar, #bottom-toolbar.toolbar, #messages-toolbar.toolbar {
 	background-color: $dark-purple;
+
 	color: #fff;
+	&.translucent-background-navbar {
+		background-color: transparent;
+		background: -prefix-linear-gradient(top, #222, transparent);
+		background: linear-gradient(to bottom, #222, transparent);
+	}
 
 	#navbar-inner {
 		overflow-y: hidden;
