--- a/src/scss/pages/other-user.scss
+++ b/src/scss/pages/other-user.scss
@@ -2,6 +2,7 @@
 
 body #root .App .views .view .page.other-user-page {
   #page-content {
+    margin: 0 auto;
     width: 100%;
     .user-interests {
       .label {
@@ -20,6 +21,10 @@ body #root .App .views .view .page.other-user-page {
         margin-top: 47%;
         .swiper-pagination-bullet {
           margin: 0 5px;
+
+          &.swiper-pagination-bullet-active {
+            background-color: $light-green;
+          }
         }
       }
 
