--- a/src/scss/_partials/_share-profile-banner.scss
+++ b/src/scss/_partials/_share-profile-banner.scss
@@ -11,7 +11,7 @@ body #root .App .view {
     .share-profile-title {
       font-size: 1.428571429em !important;
       font-weight: bold;
-      height: 40px;
+      margin-bottom: 10px;
       margin-top: 10px;
     }
 
