QS-1306: Replace prompt with popup for unlocking badges

--- a/src/scss/pages/group.scss
+++ b/src/scss/pages/group.scss
@@ -87,3 +87,12 @@ body #root .App {
     }
   }
 }
+
+.popup-unlock-group {
+  .list-block {
+    width: 95%;
+  }
+  button {
+    width: 95% !important;
+  }
+}
