--- a/src/scss/_partials/_social-wheels.scss
+++ b/src/scss/_partials/_social-wheels.scss
@@ -11,10 +11,8 @@ body #root .App .view {
       cursor: default;
       font-size: 1.1em;
       height: 15px;
+      margin-left: 0 !important;
       width: 15px;
-    }
-    .icon-wrapper:last-of-type {
-      margin-left: 0;
     }
     .fetching-icon {
       -moz-animation-duration: 1s;
@@ -50,6 +48,8 @@ body #root .App .view {
         -webkit-box-shadow: 0 0 1px 1px yellow;
         -moz-box-shadow: 0 0 1px 1px yellow;
         box-shadow: 0 0 1px 1px yellow;
+        height: 16px;
+        width: 16px;
       }
     }
     @keyframes background-to-orange {
@@ -57,6 +57,8 @@ body #root .App .view {
         -webkit-box-shadow: 0 0 1px 1px orange;
         -moz-box-shadow: 0 0 1px 1px orange;
         box-shadow: 0 0 1px 1px orange;
+        height: 16px;
+        width: 16px;
       }
     }
 
