--- a/src/scss/_partials/_theme.color.scss
+++ b/src/scss/_partials/_theme.color.scss
@@ -1,6 +1,12 @@
 .color-nekuno {
   color: $deep-purple;
 }
+.color-gray {
+  color: $dark-gray;
+}
+.color-red {
+  color: $material-red;
+}
 .list-block .item-link.list-button.color-nekuno,
 .tabbar a.active.color-nekuno,
 a.color-nekuno {
