--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -190,4 +190,26 @@
 			}
 		}
 	}
+
+	&.content-card {
+		.card-drop-down-menu {
+			color: $material-grey;
+			cursor: pointer;
+			position: absolute;
+			right: 5px;
+			top: 5px;
+			width: 20px;
+			z-index: 111111;
+		}
+		.card-title {
+			padding-left: 25px;
+			padding-right: 25px;
+			word-wrap: break-word;
+
+			a {
+				color: #000;
+			}
+		}
+
+	}
 }
