--- a/src/scss/_partials/_tag-input.scss
+++ b/src/scss/_partials/_tag-input.scss
@@ -26,7 +26,7 @@
     margin: 2px 0;
     width: 100%;
 
-    input[type="text"] {
+    input[type=time], input[type=number], input[type=search], input[type=text], input[type=password], input[type=email], input[type=tel], input[type=url], input[type=date], input[type=datetime-local] {
       background-color: transparent;
       border: none;
       color: #fff;
