--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -11,7 +11,7 @@
 @import '_partials/modal';
 @import '_partials/popup';
 @import '_partials/form';
-@import '_partials/text-input';
+@import '_partials/input';
 @import '_partials/tag-input';
 @import '_partials/date-input';
 @import '_partials/location-input';
