--- a/src/scss/pages/edit-profile.scss
+++ b/src/scss/pages/edit-profile.scss
@@ -176,7 +176,7 @@ body #root .App .views .view .page.user-page  {
           margin: 2px 0;
           width: 100%;
 
-          input[type="text"] {
+          input[type=time], input[type=number], input[type=search], input[type=text], input[type=password], input[type=email], input[type=tel], input[type=url], input[type=date], input[type=datetime-local] {
             background-color: transparent;
             border: none;
             color: #fff;
