--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -40,11 +40,11 @@ $nekuno-logo-font: 'klinic_slabmedium';
 
 @font-face {
 	font-family: 'Nekuno Icons';
-	src:  url('fonts/icomoon.eot?e2qf1j');
-	src:  url('fonts/icomoon.eot?e2qf1j#iefix') format('embedded-opentype'),
-	url('fonts/icomoon.ttf?e2qf1j') format('truetype'),
-	url('fonts/icomoon.woff?e2qf1j') format('woff'),
-	url('fonts/icomoon.svg?e2qf1j#icomoon') format('svg');
+	src:  url('fonts/icomoon.eot?r8zmbq');
+	src:  url('fonts/icomoon.eot?r8zmbq#iefix') format('embedded-opentype'),
+	url('fonts/icomoon.ttf?r8zmbq') format('truetype'),
+	url('fonts/icomoon.woff?r8zmbq') format('woff'),
+	url('fonts/icomoon.svg?r8zmbq#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -68,6 +68,18 @@ $nekuno-logo-font: 'klinic_slabmedium';
 	opacity: 0.5;
 }
 
+.icon-fa-plus:before {
+	content: "\f067";
+}
+.icon-sign-out:before {
+	content: "\f08b";
+}
+.icon-plug:before {
+	content: "\f1e6";
+}
+.icon-commenting:before {
+	content: "\f27a";
+}
 .icon-warning:before {
 	content: "\ea07";
 }
@@ -76,6 +88,9 @@ $nekuno-logo-font: 'klinic_slabmedium';
 }
 .icon-cross:before {
 	content: "\ea0f";
+}
+.icon-puzzle-piece:before {
+	content: "\f12e";
 }
 .icon-heart:before {
 	content: "\f004";
