QS-1340: Fix css

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -35,6 +35,7 @@ body #root .App .views .view.home-view {
           position: absolute;
           text-align: center;
           bottom: 175px;
+          width: 80%;
         }
       }
     }
