--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -3,6 +3,79 @@
 body #root .App .views .view.home-view {
   max-height: 800px;
 
+  .bottom-layer {
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    z-index: 111;
+
+    .swiper-pagination-and-button {
+      text-align: center;
+      bottom: 45px;
+      width: 100%;
+      z-index: 100;
+
+      .swiper-pagination {
+        margin: auto;
+        position: relative;
+      }
+      .swiper-pagination.color-nekuno .swiper-pagination-bullet-active, .swiper-pagination .swiper-pagination-bullet-active {
+        background-color: white;
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        width: 30px;
+      }
+
+      .swiper-pagination-bullet {
+        background-color: white;
+        height: 6px;
+        margin: 0 5px;
+        opacity: 1;
+        width: 6px;
+      }
+
+      .button.button-big.button-round {
+        margin: 5% auto 10px;
+        position: relative;
+        width: 80%;
+      }
+
+      .register-text-block {
+        height: 50px;
+        text-align: center;
+        .register-text {
+          cursor: pointer;
+          display: inline-block;
+          margin: 0 5px 10px;
+          vertical-align: middle;
+          //width: 35%; Uncomment to enable login as guest link styles
+
+          a {
+            font-weight: bold;
+          }
+        }
+      }
+    }
+
+    .bottom-text {
+      background: rgba(0, 0, 0, 0.25);
+      .register-sub-title {
+        height: 100%;
+        text-align: center;
+        width: 80%;
+        font-size: 0.9em;
+        padding: 1px 10%;
+
+        a {
+          color: $material-grey;
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+
+
   .swiper-container {
     height: 100%;
     overflow-y: visible;
@@ -55,67 +128,6 @@ body #root .App .views .view.home-view {
       position: relative;
     }
   }
-
-  .swiper-pagination-and-button {
-    position: absolute;
-    text-align: center;
-    bottom: 20px;
-    width: 100%;
-    z-index: 100;
-
-    .swiper-pagination {
-      margin: auto;
-      position: relative;
-    }
-    .swiper-pagination.color-nekuno .swiper-pagination-bullet-active, .swiper-pagination .swiper-pagination-bullet-active {
-      background-color: white;
-      border-radius: 5px;
-      -webkit-border-radius: 5px;
-      -moz-border-radius: 5px;
-      width: 30px;
-    }
-
-    .swiper-pagination-bullet {
-      background-color: white;
-      height: 6px;
-      margin: 0 5px;
-      opacity: 1;
-      width: 6px;
-    }
-
-    .button.button-big.button-round {
-      margin: 5% auto;
-      position: relative;
-      width: 80%;
-    }
-
-    .register-sub-title {
-      font-size: 0.9em;
-      padding: 0 10%;
-      margin-top: -20px;
-      
-      a {
-        color: $material-grey;
-        text-decoration: underline;
-      }
-    }
-
-    .register-text-block {
-      height: 50px;
-      text-align: center;
-      .register-text {
-        cursor: pointer;
-        display: inline-block;
-        margin: 0 5px 10px;
-        vertical-align: middle;
-        //width: 35%; Uncomment to enable login as guest link styles
-
-        a {
-          font-weight: bold;
-        }
-      }
-    }
-  }
 }
 
 // Default pixel ratio (1)
@@ -151,7 +163,7 @@ body #root .App .views .view.home-view {
   body #root .App .views .view.home-view .swiper-container .swiper-slide {
     .page#login-1-image, .page#login-2-image, .page#login-3-image {
       .title {
-        bottom: 180px !important;
+        bottom: 195px !important;
         font-size: 19px !important;
         line-height: 25px !important;
       }
